# shotty

./: .gitignore  ARCHITECTURE.md  PROJECT_BRIEF.md  README.md  grim_implementation_example.py  pyproject.toml  server.py
.bmad-core/: install-manifest.yaml
tests/: test_list_windows.py
