[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screenshot-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for capturing screenshots in GNOME Wayland environments"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Screenshot MCP Team"},
]
dependencies = [
    "fastmcp>=1.2.0",
    "PyGObject>=3.42.0",
    "pydbus>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server.py"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["screenshot_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"